--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: mysql:latest
     restart: always
     ports:
-      - "3306"
+      - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: "root"
       MYSQL_DATABASE: "basket-db"
@@ -15,8 +15,7 @@ services:
     image: phpmyadmin
     restart: always
     ports:
-      - "8080"
+      - "8080:80"
     environment:
-      - PMA_ARBITRARY=1
-      - PMA_HOST=mysql
-      - PMA_PORT=3306
+      PMA_HOST: "mysql"
+      PMA_PORT: "3306"
