--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,35 @@
-# For local developpement
-
 version: '3.7'
 services:
-  mysql:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    volumes:
+      - .:/app
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - app-network
+  db:
     image: mysql:latest
     restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_USER: basket
+      MYSQL_PASSWORD: basket
+      MYSQL_DATABASE: basket-db
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      timeout: 20s
+      retries: 10
+
     ports:
       - "3306:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: "root"
-      MYSQL_DATABASE: "basket-db"
+    networks:
+      - app-network
 
   phpmyadmin:
     image: phpmyadmin
@@ -17,5 +37,11 @@ services:
     ports:
       - "8080:80"
     environment:
-      PMA_HOST: "mysql"
+      PMA_HOST: "db"
       PMA_PORT: "3306"
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
